Added swagger and change dependencies